continue: auth with jwt and role
